# calendar-assistant

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: index.html  privacy.html  terms.html
src/: __init__.py  app.py  test_auth.py  test_client.py
src/client/: calendar_client.py
src/routes/: __init__.py  calendar_routes.py  health_routes.py  nlp_routes.py
src/services/: __init__.py  calendar_service.py  llm_service.py  nlp_service.py
src/test/: test_client.py
src/tests/: test_llm_service.py
